# cmangos-paladinpower

./: CMakeLists.txt  README.md
src/: PaladinpowerModule.cpp  PaladinpowerModule.h  PaladinpowerModuleConfig.cpp  PaladinpowerModuleConfig.h  paladinpower.conf.dist.in
